--- a/springcloud-gateway/src/main/resources/application.properties
+++ b/springcloud-gateway/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#配置gateway路由
+server.port=9100
+spring.application.name=springcloud-gateway
+
+#配置gateway
+spring.cloud.gateway.discovery.locator.enabled=true
 
