--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,18 @@
     <groupId>com.example</groupId>
     <artifactId>springcloud-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springcloud-eureka</module>
+        <module>springcloud-bank1</module>
+        <module>springcloud-bank2</module>
+        <module>springcloud-order</module>
+        <module>springcloud-account</module>
+        <module>springcloud-storage</module>
+    </modules>
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
-
-    <modules>
-        <module>springcloud-commons</module>
-        <module>springcloud-eureka</module>
-        <module>springcloud-gateway</module>
-        <module>springcloud-bank1</module>
-        <module>springcloud-bank2</module>
-    </modules>
 
     <dependencies>
         <dependency>
