--- a/springcloud-bank1/src/main/resources/application.properties
+++ b/springcloud-bank1/src/main/resources/application.properties
@@ -7,10 +7,13 @@ eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
 eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 
+#配置Seata 分布式事务信息
+spring.cloud.alibaba.seata.tx-service-group=seata_tx_group
+
 #配置mysql 与mybatis 数据源信息
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.187.128:3306/springboot_collections?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/springcloud_bank1?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
