使用springcloud 的技术，搭建分布式的demo的各个知识点的学习。解决分布式环境下的事务失效的问题。。。。。。。泪奔了

--- a/springcloud-bank1/src/main/resources/application.properties
+++ b/springcloud-bank1/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 server.port=9501
 spring.application.name=springcloud-bank1
 
+ribbon.eureka.enabled=true
+
 #配置eureka
-eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
-eureka.instance.ip-address=true
+eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+#eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 
 #配置Seata 分布式事务信息
