--- a/springcloud-bank2/src/main/resources/application.properties
+++ b/springcloud-bank2/src/main/resources/application.properties
@@ -3,14 +3,18 @@ server.port=9502
 spring.application.name=springcloud-bank2
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
-eureka.instance.ip-address=true
+eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+#eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
+ribbon.eureka.enabled=true
+
+#配置Seata 分布式事务信息
+spring.cloud.alibaba.seata.tx-service-group=seata_tx_group
 
 #配置mysql 与mybatis 数据源信息
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.18.128:3306/springboot_collections?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/springcloud_bank2?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
