--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <artifactId>springcloud-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>springcloud-commons</module>
         <module>springcloud-eureka</module>
         <module>springcloud-bank1</module>
         <module>springcloud-bank2</module>
