--- a/springcloud-account/src/main/resources/application.properties
+++ b/springcloud-account/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #配置微服务信息
-server.port=9503
+server.port=9505
 spring.application.name=springcloud-account
 
 #配置eureka
@@ -7,18 +7,21 @@ eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
 eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 
+#配置Seata 分布式事务信息
+spring.cloud.alibaba.seata.tx-service-group=seata_tx_group
+
 #配置mysql 与mybatis 数据源信息
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.18.128:3306/springboot_collections?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.18.128:3306/springboot_account?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 
 #mybatis
 #扫描mapper p配置文件路径
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
-#扫描实体
-mybatis.type-aliases-package=com.example.bank2.pojo
+#扫描实体s
+mybatis.type-aliases-package=com.example.account.entity
 
 #配置 druid 连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -62,4 +65,4 @@ spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=123456
 
 #配置日志
-logging.level.com.example.bank2=info
+logging.level.com.example.account=debug
