--- a/springcloud-user/pom.xml
+++ b/springcloud-user/pom.xml
@@ -22,6 +22,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>springcloud-commons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -73,6 +78,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.18</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
