使用springcloud 的技术，使用微服务的通讯方式ribbon+restTemplate 的方式实现。。。。。。

--- a/springcloud-bank2/src/main/resources/application.properties
+++ b/springcloud-bank2/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.application.name=springcloud-bank2
 
 #配置eureka
 eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.instance.hostname=${spring.cloud.client.ip-address}
 #eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 ribbon.eureka.enabled=true
+#自定义eureka的界面的服务连接跳转地址
+eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
 
 #配置Seata 分布式事务信息
 spring.cloud.alibaba.seata.tx-service-group=seata_tx_group
