--- a/springcloud-account/src/main/resources/application.properties
+++ b/springcloud-account/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=springcloud-account
 
 #配置eureka
 eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.instance.hostname=${spring.cloud.client.ip-address}
 eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 
