--- a/springcloud-storage/src/main/resources/application.properties
+++ b/springcloud-storage/src/main/resources/application.properties
@@ -6,6 +6,8 @@ ribbon.eureka.enabled=true
 
 #配置eureka
 eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.instance.hostname=${spring.cloud.client.ip-address}
 #eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 
