--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,17 @@
     <modules>
         <module>springcloud-commons</module>
         <module>springcloud-eureka</module>
+        <module>springcloud-config</module>
         <module>springcloud-bank1</module>
         <module>springcloud-bank2</module>
         <module>springcloud-order</module>
         <module>springcloud-account</module>
         <module>springcloud-storage</module>
+        <module>springcloud-gateway-netmanger</module>
+        <module>springcloud-tcc-bank1</module>
+        <module>springcloud-tcc-bank2</module>
+        <module>springcloud-ribbon</module>
+        <module>springcloud-user</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
