使用springcloud 的技术,添加使用zipkin、eureka的高可用、config、bus等微服务组件的使用。。。。。。

--- a/springcloud-config/src/main/resources/application.properties
+++ b/springcloud-config/src/main/resources/application.properties
@@ -1,1 +1,38 @@
+#配置springcloud-config的信息
+server.port=9509
+spring.application.name=springcloud-config
 
+#配置eureka
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
+eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+eureka.instance.hostname=${spring.cloud.client.ip-address}
+eureka.instance.prefer-ip-address=true
+#自定义eureka的界面的服务连接跳转地址
+eureka.instance.status-page-url=
+
+#配置加密访问
+#spring.security.user.name=root
+#spring.security.user.password=123456
+#encrypt.key=zhaojh0912
+
+
+#配置config的服务
+#注：如果Git仓库为公开仓库，可以不填写用户名和密码，如果是私有仓库需要填写，本例子是公开仓库，放心使用。
+
+#配置git仓库地址
+spring.cloud.config.server.git.uri=https://github.com/heanhan/GitConfigFileReponsitory.git
+#配置仓库路径
+spring.cloud.config.server.git.search-paths=springcloud-demo
+#配置仓库的分支
+spring.cloud.config.label=master
+#配置访问git仓库的用户名
+spring.cloud.config.server.git.username=xxxx
+#配置访问git的用户密码
+spring.cloud.config.server.git.password=xxxx
+
+#配置spirngcloud  bus相关的服务
+spring.rabbitmq.host=192.168.18.129
+management.endpoints.web.exposure.include=bus-refresh
+
+#配置zipkin
+spring.zipkin.base-url=http://127.0.0.1:9411
