--- a/springcloud-ribbon/src/main/resources/application.properties
+++ b/springcloud-ribbon/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9507
 spring.application.name=springcloud-ribbon
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 eureka.instance.hostname=${spring.cloud.client.ip-address}
 eureka.instance.prefer-ip-address=true
