--- a/springcloud-zuul/src/main/resources/application-dev.properties
+++ b/springcloud-zuul/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=9508
 spring.application.name=springcloud-zuul
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://localhost:6868/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 eureka.instance.hostname=${spring.cloud.client.ip-address}
 eureka.instance.prefer-ip-address=true
@@ -24,4 +24,13 @@ zuul.routes.api-b.service-id=springcloud-bank2
 zuul.routes.api-c.path=/api-c/**
 zuul.routes.api-c.service-id=springcloud-ribbon
 
+#配置spirngcloud  bus相关的服务
 
+#配置与之相关的rabbitmq
+spring.rabbitmq.host=192.168.18.129
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.cloud.bus.enabled=true
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=bus-refresh
