--- a/springcloud-bank1/src/main/resources/application.properties
+++ b/springcloud-bank1/src/main/resources/application.properties
@@ -5,13 +5,16 @@ spring.application.name=springcloud-bank1
 ribbon.eureka.enabled=true
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 eureka.instance.hostname=${spring.cloud.client.ip-address}
 #eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 #自定义eureka的界面的服务连接跳转地址
 eureka.instance.status-page-url=http://localhost:${server.port}/swagger-ui.html
+
+#配置zipkin
+spring.zipkin.base-url=http://127.0.0.1:9411
 
 #配置Seata 分布式事务信息
 spring.cloud.alibaba.seata.tx-service-group=seata_tx_group
