--- a/springcloud-bank2/src/main/resources/registry.conf
+++ b/springcloud-bank2/src/main/resources/registry.conf
@@ -8,7 +8,7 @@ registry {
     cluster = "default"
   }
   eureka {
-    serviceUrl = "http://localhost:6868/eureka"
+    serviceUrl = "http://localhost:6861/eureka,http://localhost:6862/eureka,http://localhost:6863/eureka"
     application = "default"
     weight = "1"
   }
