--- a/springcloud-eureka/src/main/resources/application.properties
+++ b/springcloud-eureka/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 #配置服务
-server.port=6868
-spring.application.name=springcloud-eureka
-spring.freemarker.prefer-file-system-access=false
 
-#配置eureka
-#是否将自己注册到Eureka服务中，本身就是所有无需注册
-eureka.client.registerWithEureka=false
+#创建高可用的注册中心 eureka
+spring.profiles.active=test3
 
-#是否从Eureka中获取注册信息
-eureka.client.fetchRegistry=false
-#Eureka客户端与Eureka服务端进行交互的地址
-eureka.client.serviceUrl.defaultZone = http://127.0.0.1:6868/eureka/
+
+#server.port=6868
+#spring.application.name=springcloud-eureka
+#spring.freemarker.prefer-file-system-access=false
+#
+##配置eureka
+##是否将自己注册到Eureka服务中，本身就是所有无需注册
+#eureka.client.registerWithEureka=false
+#
+##是否从Eureka中获取注册信息
+#eureka.client.fetchRegistry=false
+##Eureka客户端与Eureka服务端进行交互的地址
+#eureka.client.serviceUrl.defaultZone = http://localhost:6868/eureka/
+#
+##配置zipkin
+#spring.zipkin.base-url=http://127.0.0.1:9411
 
