--- a/springcloud-order/src/main/resources/application.properties
+++ b/springcloud-order/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=springcloud-order
 ribbon.eureka.enabled=true
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 eureka.instance.hostname=${spring.cloud.client.ip-address}
 #eureka.instance.ip-address=true
