--- a/springcloud-user/src/main/resources/application.properties
+++ b/springcloud-user/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9506
 spring.application.name=springcloud-user
 
 #配置eureka
-eureka.client.service-url.defaultZone=http://127.0.0.1:6868/eureka/
+eureka.client.service-url.defaultZone=http://127.0.0.1:6861/eureka/,http://localhost:6862/eureka/,http://localhost:6863/eureka/
 #eureka.instance.ip-address=true
 eureka.instance.prefer-ip-address=true
 ribbon.eureka.enabled=true
